syntax = "proto3";

package auth;

option go_package = "github.com/backslash-security-tests/golang-supermarket/auth;auth";

service Auth {
    rpc SignIn (SignInInput) returns (SignInOutput) {}
    rpc VerifyToken (VerifyTokenInput) returns (VerifyTokenOutput) {}
}

message SignInInput {
    string email = 1;
    string password = 2;
}

message SignInOutput {
    string access_token = 1;
}

message VerifyTokenInput {
    int64 customer_id = 1;
    string access_token = 2;
}

message VerifyTokenOutput {
    int64 customer_id = 1;
    bool success = 2;
}

