syntax = "proto3";

package customers;

option go_package = "github.com/backslash-security-tests/golang-supermarket/customers;customers";

service Customers {
    rpc Register (RegisterInput) returns (RegisterOutput) {}
    rpc GetInfo (GetInfoInput) returns (GetInfoOutput) {}
    rpc VerifyPassword (VerifyPasswordInput) returns (VerifyPasswordOutput) {}
}

message RegisterInput {
    string email = 1;
    string delivery_address = 2;
    string password = 3;
}

message RegisterOutput {
    int64 customer_id = 1;
}

message GetInfoInput {
    optional int64 customer_id = 1;
    optional string email = 2;
}

message GetInfoOutput {
    string email = 1;
    string delivery_address = 2;
    int64 customer_id = 3;
}

message VerifyPasswordInput {
    int64 customer_id = 1;
    string password = 2;
}

message VerifyPasswordOutput {
    bool success = 1;
}

